brat/test/golden/error/toplevel-leftovers.brat.golden
Error in test/golden/error/toplevel-leftovers.brat on line 2:
f = 42
    ^^

  Type mismatch when checking f
Expected: (0 :: Nat, 1 :: Bool)
But got:  (0 :: Nat)


